
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiffutils"
version = "0.1.0"
description = "Modular TIFF file manipulation package for microscopy"
authors = [{name = "Your Name"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
"Source" = "https://github.com/yourusername/tiffutils"
